--- a/index.html
+++ b/index.html
@@ -3,56 +3,156 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
-      type="image/png"
+      href="images/favicon-32x32.png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      type="image/png "
     />
-
-    <title>Frontend Mentor | Clipboard landing page</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="scss/style.css" />
+    <title>Clipboard</title>
   </head>
   <body>
-    A history of everything you copy Clipboard allows you to track and organize
-    everything you copy. Instantly access your clipboard on all your devices.
-    Download for iOS Download for Mac Keep track of your snippets Clipboard
-    instantly stores any item you copy in the cloud, meaning you can access your
-    snippets immediately on all your devices. Our Mac and iOS apps will help you
-    organize everything. Quick Search Easily search your snippets by content,
-    category, web address, application, and more. iCloud Sync Instantly saves
-    and syncs snippets across all your devices. Complete History Retrieve any
-    snippets from the first moment you started using the app. Access Clipboard
-    anywhere Whether you’re on the go, or at your computer, you can access all
-    your Clipboard snippets in a few simple clicks. Supercharge your workflow
-    We’ve got the tools to boost your productivity. Create blacklists Ensure
-    sensitive information never makes its way to your clipboard by excluding
-    certain sources. Plain text snippets Remove unwanted formatting from copied
-    text for a consistent look. Sneak preview Quick preview of all snippets on
-    your Clipboard for easy access. Clipboard for iOS and Mac OS Available for
-    free on the App Store. Download for Mac or iOS, sync with iCloud and you’re
-    ready to start adding to your clipboard. Download for iOS Download for Mac
-    FAQs Contact Us Privacy Policy Press Kit Install Guide
+    <!-- Hero -->
+    <section class="hero wrapper centered">
+      <img class="hero__logo" src="images/logo.svg" alt="lgoo" width="125" />
 
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+      <div class="content">
+        <h1>
+          A history of <br />
+          everything you copy
+        </h1>
+
+        <p class="large margin-bottom">
+          Clipboard allows you to track and organize everything you copy.
+          Instantly access your clipboard on all your devices.
+        </p>
+
+        <div class="cta-container">
+          <button class="cyan">Download for iOS</button>
+          <button class="purple">Download for Mac</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Access -->
+    <section class="access wrapper centered">
+      <div class="content">
+        <h2>Access Clipboard anywhere</h2>
+
+        <p class="medium lg-margin-bottom">
+          Whether you’re on the go, or at your computer, you can access all your
+          Clipboard snippets in a few simple clicks.
+        </p>
+        <img src="images/image-devices.png" alt="devices" />
+      </div>
+    </section>
+
+    <!-- Supercharge -->
+
+    <section class="supercharge wrapper centered">
+      <div class="content">
+        <h2>Supercharge your workflow</h2>
+
+        <p class="large margin-bottom">
+          We’ve got the tools to boost your productivity.
+        </p>
+      </div>
+      <div class="supercharge__columns">
+        <div class="supercharge__column">
+          <div class="supercharge__icon">
+            <img src="/images/icon-blacklist.svg" alt="blacklist" />
+          </div>
+
+          <h3>Create blacklists</h3>
+          <p class="small">
+            Ensure sensitive information never makes its way to your clipboard
+            by excluding certain sources.
+          </p>
+        </div>
+
+        <div class="supercharge__column">
+          <div class="supercharge__icon">
+            <img src="/images/icon-text.svg" alt="text" />
+          </div>
+          <h3>Plain text snippets</h3>
+
+          <p class="small">
+            Remove unwanted formatting from copied text for a consistent look.
+          </p>
+        </div>
+
+        <div class="supercharge__column">
+          <div class="supercharge__icon">
+            <img src="/images/icon-preview.svg" alt="preview" />
+          </div>
+          <h3>Sneak preview</h3>
+          <p class="small">
+            Quick preview of all snippets on your Clipboard for easy access.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Logos -->
+    <section class="logos wrapper">
+      <div class="logos__container">
+        <div class="logo">
+          <img src="/images/logo-google.png" alt="google-icon" />
+        </div>
+        <div class="logo">
+          <img src="/images/logo-ibm.png" alt="ibm-icon" />
+        </div>
+        <div class="logo">
+          <img src="/images/logo-microsoft.png" alt="microsoft-icon" />
+        </div>
+        <div class="logo">
+          <img src="/images/logo-hp.png" alt="hp-icon" />
+        </div>
+        <div class="logo">
+          <img src="/images/logo-vector-graphics.png" alt="graphics-icon" />
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="cta wrapper centered">
+      <h2>Clipboard for iOS and Mac OS</h2>
+
+      <p class="lg-margin-bottom">
+        Available for free on the App Store. Download for Mac or iOS, sync with
+        iCloud and you’re ready to start adding to your clipboard.
       </p>
+
+      <div class="cta-container">
+        <button class="cyan">Download for iOS</button>
+        <button class="purple">Download for Mac</button>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer-container">
+        <div class="logo">
+          <img src="/images/logo.svg" alt="logo" />
+        </div>
+        <div class="links">
+          <a href="#">FAQs</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Press Kit</a>
+          <a href="#">Install Guide</a>
+        </div>
+        <div class="social">
+          <a href="#" class="facebook"></a>
+          <a href="#" class="twitter"></a>
+          <a href="#" class="instagram"></a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
